# avalanche-segmentation

./: .gitignore  LICENSE  README.md  app.py  backend.py
backend/: app.py  app_fastapi.py  avalancheSizeEstimation.ipynb  backend.py  classifiers.py  helpers.py  inference.py  pyproject.toml  sam.py  sam_utils.py
frontend/: config.ts  package-lock.json  package.json
frontend/pages/: index.tsx
notebooks/: Avalanche_spam_and_classifier.ipynb
