[project]
name = "sam-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "gradio>=4.25.0",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.10.5",
    "sam-2",
    "segment-anything",
    "torch==2.5.1",
    "torchvision>=0.20.1",
]

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
